alignment bug fix

--- a/client/src/components/Home/HomePage.css
+++ b/client/src/components/Home/HomePage.css
@@ -177,7 +177,7 @@
   }
 
   .content-wrapper {
-    margin: 0 30px;
+    margin: 10px;
   }
 
   .home-title {
